@@ -13,6 +13,7 @@ use WebService::PivotalTracker::Client;
 use WebService::PivotalTracker::Me;
 use WebService::PivotalTracker::Project;
 use WebService::PivotalTracker::ProjectIteration;
+use WebService::PivotalTracker::ProjectMembership ();
 use WebService::PivotalTracker::Story;
 use WebService::PivotalTracker::Types
     qw( ArrayRef ClientObject IterationScope LWPObject MD5Hex NonEmptyStr PositiveInt Uri );
@@ -125,6 +126,38 @@ sub projects {
             raw_content => $content,
             pt_api      => $self,
         );
+    }
+}
+
+{
+    my $check = validation_for(
+        params => {
+            project_id => { type => PositiveInt },
+            sort_by    => {
+                type     => NonEmptyStr,    # This could be an enum.
+                optional => 1,
+            },
+        },
+    );
+
+    sub project_memberships {
+        my $self = shift;
+        my %args = $check->(@_);
+
+        my $project_id = delete $args{project_id};
+        my $uri        = $self->_client->build_uri(
+            "/projects/$project_id/memberships",
+            \%args,
+        );
+
+        return [
+            map {
+                WebService::PivotalTracker::ProjectMembership->new(
+                    raw_content => $_,
+                    pt_api      => $self,
+                    )
+            } @{ $self->_client->get($uri) }
+        ];
     }
 }
 
@@ -388,6 +421,18 @@ A story ID after which this story should be added.
 =back
 
 By default the story will be added as the last story in the icebox.
+
+=head2 $pt->project_memberships(...)
+
+This looks up memberships in a project. It returns an array reference of
+L<WebService::PivotalTracker::ProjectMembership> objects.
+
+It is useful if you need to discover information about a person who is a member
+of your project.
+
+The C<project_id> parameter is required.
+
+The C<sort_by> parameter is optional.
 
 =head2 $pt->me
 
